load("//chromium:build_defs.bzl", "chromium_cc_library", "chromium_cc_test")

chromium_cc_library(
    name = "adapters",
    srcs = ["adapters_internal.h"],
    hdrs = ["adapters.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//chromium/base:compiler_specific",
        "//chromium/base/memory:raw_ptr_exclusion",
    ],
)

chromium_cc_library(
    name = "checked_iterators",
    srcs = ["span_forward_internal.h"],
    hdrs = ["checked_iterators.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//chromium/base:check",
        "//chromium/base:compiler_specific",
        "//chromium/base/memory:raw_ptr_exclusion",
        "//chromium/build:build_config",
    ],
)

chromium_cc_library(
    name = "contains",
    hdrs = ["contains.h"],
    visibility = ["//visibility:public"],
)

chromium_cc_library(
    name = "flat_map",
    hdrs = ["flat_map.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":flat_tree",
        "//chromium/base:check",
    ],
)

chromium_cc_library(
    name = "flat_set",
    hdrs = ["flat_set.h"],
    visibility = ["//visibility:public"],
    deps = [":flat_tree"],
)

chromium_cc_library(
    name = "flat_tree",
    hdrs = ["flat_tree.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//chromium/base:check",
        "//chromium/base:compiler_specific",
        "//chromium/base/memory:raw_ptr_exclusion",
    ],
)

chromium_cc_library(
    name = "heap_array",
    hdrs = ["heap_array.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":span",
        "//chromium/base:check_op",
        "//chromium/base:compiler_specific",
    ],
)

chromium_cc_library(
    name = "map_util",
    hdrs = ["map_util.h"],
    visibility = ["//visibility:public"],
    deps = ["//chromium/base/types:to_address"],
)

chromium_cc_library(
    name = "span",
    srcs = ["span_forward_internal.h"],
    hdrs = ["span.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":checked_iterators",
        "//chromium/base:check",
        "//chromium/base:compiler_specific",
        "//chromium/base/numerics:integral_constant_like",
        "//chromium/base/numerics:safe_math",
        "//chromium/base/types:to_address",
    ],
)

chromium_cc_library(
    name = "span_writer",
    hdrs = ["span_writer.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":span",
        "//chromium/base/memory:raw_span",
        "//chromium/base/numerics:byte_conversions",
    ],
)

chromium_cc_library(
    name = "to_vector",
    hdrs = ["to_vector.h"],
    visibility = ["//visibility:public"],
)

chromium_cc_test(
    name = "adapters_unittest",
    size = "small",
    srcs = ["adapters_unittest.cc"],
    deps = [
        ":adapters",
        ":span",
        ":to_vector",
        "//chromium/testing/gtest",
    ],
)

chromium_cc_test(
    name = "checked_iterators_unittest",
    size = "small",
    srcs = ["checked_iterators_unittest.cc"],
    deps = [
        ":checked_iterators",
        "//chromium/base:check_op",
        "//chromium/base/debug:alias",
        "//chromium/base/test:gtest_util",
        "//chromium/build:build_config",
        "//chromium/testing/gtest",
    ],
)

chromium_cc_test(
    name = "contains_unittest",
    size = "small",
    srcs = ["contains_unittest.cc"],
    deps = [
        ":contains",
        ":flat_set",
        "//chromium/base/strings",
        "//chromium/testing/gmock",
        "//chromium/testing/gtest",
    ],
)

chromium_cc_test(
    name = "heap_array_unittest",
    size = "small",
    srcs = ["heap_array_unittest.cc"],
    deps = [
        ":heap_array",
        ":span",
        "//chromium/base/memory:raw_ptr_exclusion",
        "//chromium/base/test:gtest_util",
        "//chromium/testing/gmock",
        "//chromium/testing/gtest",
    ],
)

chromium_cc_test(
    name = "map_util_unittest",
    size = "small",
    srcs = ["map_util_unittest.cc"],
    deps = [
        ":flat_map",
        ":map_util",
        "//chromium/testing/gmock",
        "//chromium/testing/gtest",
    ],
)

chromium_cc_test(
    name = "span_unittest",
    size = "small",
    srcs = ["span_unittest.cc"],
    deps = [
        ":adapters",
        ":checked_iterators",
        ":span",
        "//chromium/base:bit_cast",
        "//chromium/base:compiler_specific",
        "//chromium/base/debug:alias",
        "//chromium/base/memory:raw_span",
        "//chromium/base/numerics:byte_conversions",
        "//chromium/base/strings",
        "//chromium/base/strings:cstring_view",
        "//chromium/base/strings:to_string",
        "//chromium/base/test:gtest_util",
        "//chromium/testing/gmock",
        "//chromium/testing/gtest",
    ],
)

chromium_cc_test(
    name = "span_writer_unittest",
    size = "small",
    srcs = ["span_writer_unittest.cc"],
    deps = [
        ":span_writer",
        "//chromium/testing/gmock",
        "//chromium/testing/gtest",
    ],
)

chromium_cc_test(
    name = "to_vector_unittest",
    size = "small",
    srcs = ["to_vector_unittest.cc"],
    deps = [
        ":adapters",
        ":flat_set",
        ":to_vector",
        "//chromium/testing/gmock",
        "//chromium/testing/gtest",
    ],
)
