load("//chromium:build_defs.bzl", "chromium_cc_library", "chromium_cc_test")

chromium_cc_library(
    name = "file_path",
    srcs = [
        "file_path.cc",
        "safe_base_name.cc",
    ],
    hdrs = [
        "file_path.h",
        "safe_base_name.h",
    ],
    linkopts = select({
        "@platforms//os:windows": ["user32.lib"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//chromium/base:base_export",
        "//chromium/base:check_op",
        "//chromium/base:compiler_specific",
        "//chromium/base/numerics:safe_math",
        "//chromium/base/strings",
        "//chromium/base/strings:strcat",
        "//chromium/base/strings:sys_string_conversions",
        "//chromium/build:build_config",
    ] + select({
        "@platforms//os:macos": [
            "//chromium/base/apple:scoped_cftyperef",
            "//chromium/base/third_party/icu",
        ],
        "@platforms//os:ios": [
            "//chromium/base/apple:scoped_cftyperef",
            "//chromium/base/third_party/icu",
        ],
        "@platforms//os:windows": [
            "//chromium/base/win:win_util",
        ],
        "//conditions:default": [],
    }),
)

chromium_cc_library(
    name = "platform_file",
    hdrs = ["platform_file.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":scoped_file",
        "//chromium/build:build_config",
    ] + select({
        "@platforms//os:windows": [
            "//chromium/base/win:scoped_handle",
            "//chromium/base/win:windows_types",
        ],
        "//conditions:default": [],
    }),
)

chromium_cc_library(
    name = "scoped_file",
    srcs = ["scoped_file.cc"] + select({
        "@platforms//os:android": ["scoped_file_android.cc"],
        "@platforms//os:chromiumos": ["scoped_file_linux.cc"],
        "@platforms//os:linux": ["scoped_file_linux.cc"],
        "//conditions:default": [],
    }),
    hdrs = ["scoped_file.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//chromium/base:base_export",
        "//chromium/base:check",
        "//chromium/base:scoped_generic",
        "//chromium/build:build_config",
    ] + select({
        "@platforms//os:windows": [],
        "//conditions:default": ["//chromium/base/posix:eintr_wrapper"],
    }) + select({
        "@platforms//os:chromiumos": [
            "//chromium/base:compiler_specific",
            "//chromium/base:immediate_crash",
            "//chromium/base:logging",
        ],
        "@platforms//os:linux": [
            "//chromium/base:compiler_specific",
            "//chromium/base:immediate_crash",
            "//chromium/base:logging",
        ],
        "//conditions:default": [],
    }),
)

chromium_cc_test(
    name = "file_path_unittest",
    size = "small",
    srcs = ["file_path_unittest.cc"],
    deps = [
        ":file_path",
        "//chromium/base/strings",
        "//chromium/base/test:gtest_util",
        "//chromium/build:build_config",
        "//chromium/build:buildflag",
        "//chromium/testing:platform_test",
        "//chromium/testing/gtest",
    ] + select({
        "@platforms//os:windows": [],
        "//conditions:default": ["//chromium/base/test:scoped_locale"],
    }),
)

chromium_cc_test(
    name = "safe_base_name_unittest",
    size = "small",
    srcs = ["safe_base_name_unittest.cc"],
    deps = [
        ":file_path",
        "//chromium/testing/gtest",
    ],
)
