load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("//chromium:build_defs.bzl", "chromium_cc_library")

chromium_cc_library(
    name = "concat",
    hdrs = ["concat.h"],
    visibility = ["//visibility:public"],
)

chromium_cc_library(
    name = "if",
    hdrs = ["if.h"],
    visibility = ["//visibility:public"],
    deps = [":concat"],
)

chromium_cc_library(
    name = "is_empty",
    hdrs = ["is_empty.h"],
    visibility = ["//visibility:public"],
)

chromium_cc_library(
    name = "remove_parens",
    hdrs = ["remove_parens.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":if",
        ":is_empty",
    ],
)

chromium_cc_library(
    name = "uniquify",
    hdrs = ["uniquify.h"],
    visibility = ["//visibility:public"],
    deps = [":concat"],
)

build_test(
    name = "is_empty_unittest",
    targets = [":is_empty_unittest_lib"],
)

chromium_cc_library(
    name = "is_empty_unittest_lib",
    testonly = True,
    srcs = ["is_empty_unittest.cc"],
    deps = [":is_empty"],
)
