load("//chromium:build_defs.bzl", "chromium_cc_library", "chromium_cc_test")

chromium_cc_library(
    name = "ptr_util",
    hdrs = ["ptr_util.h"],
    visibility = ["//visibility:public"],
)

chromium_cc_library(
    name = "raw_ptr",
    hdrs = ["raw_ptr.h"],
    visibility = ["//chromium:__subpackages__"],
    deps = ["//chromium/base/allocator/partition_allocator:raw_ptr"],
)

chromium_cc_library(
    name = "raw_ptr_exclusion",
    hdrs = ["raw_ptr_exclusion.h"],
    visibility = ["//chromium:__subpackages__"],
    deps = ["//chromium/base/allocator/partition_allocator:raw_ptr"],
)

chromium_cc_library(
    name = "raw_ref",
    hdrs = ["raw_ref.h"],
    visibility = ["//chromium:__subpackages__"],
    deps = ["//chromium/base/allocator/partition_allocator:raw_ptr"],
)

chromium_cc_library(
    name = "raw_span",
    hdrs = ["raw_span.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":raw_ptr",
        "//chromium/base/containers:span",
    ],
)

chromium_cc_library(
    name = "scoped_policy",
    hdrs = ["scoped_policy.h"],
    visibility = ["//visibility:public"],
)

chromium_cc_test(
    name = "ptr_util_unittest",
    size = "small",
    srcs = ["ptr_util_unittest.cc"],
    deps = [
        ":ptr_util",
        "//chromium/testing/gtest",
    ],
)

chromium_cc_test(
    name = "raw_span_unittest",
    size = "small",
    srcs = ["raw_span_unittest.cc"],
    deps = [
        ":raw_span",
        "//chromium/testing/gmock",
        "//chromium/testing/gtest",
    ],
)
