load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("//chromium:build_defs.bzl", "chromium_cc_library", "chromium_cc_test")
load("//chromium/bazel:buildflag_header.bzl", "buildflag_header")

bool_flag(
    name = "protected_memory_enabled",
    build_setting_default = True,
)

chromium_cc_library(
    name = "aligned_memory",
    srcs = ["aligned_memory.cc"],
    hdrs = ["aligned_memory.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//chromium/base:base_export",
        "//chromium/base:check",
        "//chromium/base:check_op",
        "//chromium/base:logging",
        "//chromium/base/containers:heap_array",
        "//chromium/base/containers:span",
        "//chromium/build:build_config",
    ],
)

chromium_cc_library(
    name = "page_size",
    srcs = select({
        "@platforms//os:windows": ["page_size_win.cc"],
        "//conditions:default": ["page_size_posix.cc"],
    }),
    hdrs = ["page_size.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//chromium/base:base_export",
    ],
)

chromium_cc_library(
    name = "protected_memory",
    srcs = select({
        "@platforms//os:windows": ["protected_memory_win.cc"],
        "//conditions:default": ["protected_memory_posix.cc"],
    }),
    hdrs = ["protected_memory.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":page_size",
        ":protected_memory_buildflags",
        ":raw_ref",
        "//chromium/base:bits",
        "//chromium/base:check",
        "//chromium/base:check_op",
        "//chromium/base:compiler_specific",
        "//chromium/base:gtest_prod_util",
        "//chromium/base:no_destructor",
        "//chromium/base:thread_annotations",
        "//chromium/base/synchronization:lock",
        "//chromium/build:build_config",
    ],
)

buildflag_header(
    name = "protected_memory_buildflags",
    flags = {
        "PROTECTED_MEMORY_ENABLED": ":protected_memory_enabled",
    },
    visibility = ["//visibility:public"],
)

chromium_cc_library(
    name = "ptr_util",
    hdrs = ["ptr_util.h"],
    visibility = ["//visibility:public"],
)

chromium_cc_library(
    name = "raw_ptr",
    hdrs = ["raw_ptr.h"],
    visibility = ["//chromium:__subpackages__"],
    deps = ["//chromium/base/allocator/partition_allocator:raw_ptr"],
)

chromium_cc_library(
    name = "raw_ptr_exclusion",
    hdrs = ["raw_ptr_exclusion.h"],
    visibility = ["//chromium:__subpackages__"],
    deps = ["//chromium/base/allocator/partition_allocator:raw_ptr"],
)

chromium_cc_library(
    name = "raw_ref",
    hdrs = ["raw_ref.h"],
    visibility = ["//chromium:__subpackages__"],
    deps = ["//chromium/base/allocator/partition_allocator:raw_ptr"],
)

chromium_cc_library(
    name = "raw_span",
    hdrs = ["raw_span.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":raw_ptr",
        "//chromium/base/containers:span",
    ],
)

chromium_cc_library(
    name = "ref_counted",
    srcs = ["ref_counted.cc"],
    hdrs = ["ref_counted.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":scoped_refptr",
        "//chromium/base:atomic_ref_count",
        "//chromium/base:base_export",
        "//chromium/base:check",
        "//chromium/base:check_op",
        "//chromium/base:compiler_specific",
        "//chromium/base:dcheck_is_on",
        "//chromium/base:sequence_checker",
        "//chromium/base/threading:thread_collision_warner",
        "//chromium/build:build_config",
    ],
)

chromium_cc_library(
    name = "safe_ref",
    hdrs = ["safe_ref.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":safe_ref_traits",
        ":weak_ptr",
        "//chromium/base:check",
    ],
)

chromium_cc_library(
    name = "safe_ref_traits",
    hdrs = ["safe_ref_traits.h"],
    visibility = ["//visibility:public"],
)

chromium_cc_library(
    name = "scoped_policy",
    hdrs = ["scoped_policy.h"],
    visibility = ["//visibility:public"],
)

chromium_cc_library(
    name = "scoped_refptr",
    hdrs = ["scoped_refptr.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":raw_ptr",
        ":raw_ptr_exclusion",
        "//chromium/base:check",
        "//chromium/base:compiler_specific",
    ],
)

chromium_cc_library(
    name = "stack_allocated",
    hdrs = ["stack_allocated.h"],
    visibility = ["//visibility:public"],
)

chromium_cc_library(
    name = "weak_ptr",
    srcs = ["weak_ptr.cc"],
    hdrs = ["weak_ptr.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":raw_ptr",
        ":ref_counted",
        ":safe_ref_traits",
        "//chromium/base:base_export",
        "//chromium/base:check",
        "//chromium/base:compiler_specific",
        "//chromium/base:dcheck_is_on",
        "//chromium/base:sequence_checker",
        "//chromium/base/synchronization:atomic_flag",
    ],
)

chromium_cc_test(
    name = "aligned_memory_unittest",
    size = "small",
    srcs = ["aligned_memory_unittest.cc"],
    deps = [
        ":aligned_memory",
        "//chromium/base:compiler_specific",
        "//chromium/build:build_config",
        "//chromium/testing:gtest",
    ],
)

chromium_cc_test(
    name = "protected_memory_unittest",
    size = "small",
    srcs = ["protected_memory_unittest.cc"],
    deps = [
        ":protected_memory",
        ":protected_memory_buildflags",
        "//chromium/base/synchronization:lock",
        "//chromium/base/test:gtest_util",
        "//chromium/build:build_config",
        "//chromium/testing:gtest",
    ],
)

chromium_cc_test(
    name = "ptr_util_unittest",
    size = "small",
    srcs = ["ptr_util_unittest.cc"],
    deps = [
        ":ptr_util",
        "//chromium/testing:gtest",
    ],
)

chromium_cc_test(
    name = "raw_span_unittest",
    size = "small",
    srcs = ["raw_span_unittest.cc"],
    deps = [
        ":raw_span",
        "//chromium/base:compiler_specific",
        "//chromium/testing:gtest",
    ],
)

chromium_cc_test(
    name = "ref_counted_unittest",
    size = "small",
    srcs = ["ref_counted_unittest.cc"],
    deps = [
        ":raw_ptr",
        ":ref_counted",
        "//chromium/base/test:gtest_util",
        "//chromium/build:build_config",
        "//chromium/testing:gtest",
    ],
)

chromium_cc_test(
    name = "safe_ref_unittest",
    size = "small",
    srcs = ["safe_ref_unittest.cc"],
    deps = [
        ":safe_ref",
        "//chromium/base/functional:bind",
        "//chromium/base/functional:callback",
        "//chromium/base/memory:raw_ptr_exclusion",
        "//chromium/base/memory:weak_ptr",
        "//chromium/base/test:gtest_util",
        "//chromium/testing:gtest",
    ],
)
