load("//chromium:build_defs.bzl", "chromium_cc_library")

chromium_cc_library(
    name = "integral_constant_like",
    hdrs = ["integral_constant_like.h"],
    visibility = ["//visibility:public"],
)

chromium_cc_library(
    name = "safe_math",
    srcs = [
        "checked_math_impl.h",
        "clamped_math_impl.h",
        "safe_conversions_arm_impl.h",
        "safe_conversions_impl.h",
        "safe_math_arm_impl.h",
        "safe_math_clang_gcc_impl.h",
        "safe_math_shared_impl.h",
    ],
    hdrs = [
        "checked_math.h",
        "clamped_math.h",
        "safe_conversions.h",
        "safe_math.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":integral_constant_like",
        "//chromium/build:build_config",
    ],
)
