load("//chromium:build_defs.bzl", "chromium_cc_library", "chromium_cc_test")

chromium_cc_library(
    name = "basic_ops_impl",
    hdrs = ["basic_ops_impl.h"],
    visibility = ["//visibility:public"],
)

chromium_cc_library(
    name = "byte_conversions",
    hdrs = ["byte_conversions.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":basic_ops_impl",
        "//chromium/build:build_config",
    ],
)

chromium_cc_library(
    name = "integral_constant_like",
    hdrs = ["integral_constant_like.h"],
    visibility = ["//visibility:public"],
)

chromium_cc_library(
    name = "safe_math",
    srcs = [
        "checked_math_impl.h",
        "clamped_math_impl.h",
        "safe_conversions_arm_impl.h",
        "safe_conversions_impl.h",
        "safe_math_arm_impl.h",
        "safe_math_clang_gcc_impl.h",
        "safe_math_shared_impl.h",
    ],
    hdrs = [
        "checked_math.h",
        "clamped_math.h",
        "safe_conversions.h",
        "safe_math.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":integral_constant_like",
        "//chromium/build:build_config",
    ],
)

chromium_cc_test(
    name = "byte_conversions_unittest",
    size = "small",
    srcs = ["byte_conversions_unittest.cc"],
    deps = [
        ":byte_conversions",
        "//chromium/testing:gtest",
    ],
)
